<resources>
    <string name="app_name">Restro Kotlin</string>

    <string name="media_pipe">MediaPipe</string>

    <string name="alt_bottom_sheet_chevron">Bottom sheet expandable indicator</string>

    <string name="alt_bottom_sheet_max_results_button_minus">Decreasing
        maximum pose results button</string>
    <string name="alt_bottom_sheet_max_results_button_plus">Increasing
        maximum pose results button</string>
    <string name="alt_bottom_sheet_threshold_button_minus">Decreasing
        threshold of pose detect results button</string>
    <string name="alt_bottom_sheet_threshold_button_plus">Increasing
        threshold of pose detect results button</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_gallery">Gallery</string>
    <string name="tv_gallery_placeholder">Click + to add an image or a video
        to begin running the pose landmarker.</string>

    <string name="label_inference_time">Inference Time</string>
    <string name="label_fps">Frames per Second</string>
    <string name="label_pose_detection_confidence_threshold">Detection
        Threshold</string>
    <string name="label_pose_tracking_confidence_threshold">Tracking
        Threshold</string>
    <string name="label_pose_presence_confidence_threshold">Presence
        Threshold</string>
    <string name="label_num_poses">Number of Poses</string>
    <string name="label_delegate">Delegate</string>
    <string name="label_models">Model</string>

    <string-array name="delegate_spinner_titles">
        <item>CPU</item>
        <item>GPU</item>
    </string-array>

    <string-array name="models_spinner_titles">
        <item>Pose Landmarker Full</item>
        <item>Pose Landmarker Lite</item>
        <item>Pose Landmarker Heavy</item>
    </string-array>

    <string name="title_menu_1">Transaksi Dengan Mudah dan Cepat</string>
    <string name="title_menu_2">Arsitek Bersertifikasi</string>
    <string name="title_menu_3">Kemudahan Penggunaan Aplikasi</string>
    <string name="title_menu_4">Platform Integrasi Konstruksi No 1 di Indonesia</string>
    <string name="desc_menu_1">Ceritakan momen yang anda lalui hari ini kepada 1 juta pengguna yang tersebar di seluruh Indonesia.</string>
    <string name="desc_menu_2">Tidak baik untuk memendam apa yang kamu rasakan, silahkan tumpahkan perasaan anda pada story yang anda buat.</string>
    <string name="desc_menu_3">Dengan begitu anda dapat berbagi ilmu kepada sesama pengguna.</string>
    <string name="desc_menu_4">Dengan membaca curhatan pengguna dapat mengisi waktu luang-mu.</string>
    <string name="learn_now">Coba Sekarang</string>

    <string name="empty_name">Nama Tidak Boleh Kosong!</string>
    <string name="empty_email">Email Tidak Boleh Kosong!</string>
    <string name="empty_password">Kata Sandi Tidak Boleh Kosong!</string>
    <string name="empty_passconf">Kata Sandi Konfirmasi Tidak Boleh Kosong!</string>
    <string name="invalid_email">Format Email Salah!</string>
    <string name="invalid_password">Password tidak boleh kurang dari 8 karakter!</string>

    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="calendar">Calendar</string>
    <string name="detect">Detect</string>
    <string name="food">Food</string>

    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="theme">theme</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat">Chat</string>
</resources>