<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"/>
    <item
        android:id="@+id/calendarFragment"
        android:icon="@drawable/baseline_calendar_month_24"
        android:title="@string/calendar"/>
    <item
        android:id="@+id/chatListFragment"
        android:icon="@drawable/outline_business_messages_24"
        android:iconTint="#818181"
        android:title="@string/chat"/>
    <item
        android:id="@+id/foodFragment"
        android:icon="@drawable/baseline_restaurant_24"
        android:title="@string/food"/>
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile"/>

</menu>